# bounswe2017group10

./: .gitignore  .travis.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  any_changes_in.sh  package-lock.json
API Project/: .classpath  .project  README.md  build.gradle  doc_config
API Project/docs/html/: annotated.html  class_greeting_tests-members.html  class_greeting_tests.html  class_user_tests-members.html  class_user_tests.html  classcom_1_1bounswe_1_1_application-members.html  classcom_1_1bounswe_1_1_application.html  classcom_1_1bounswe_1_1controllers_1_1_cultural_heritages_controller-members.html  classcom_1_1bounswe_1_1controllers_1_1_cultural_heritages_controller.html  classes.html  (+45 more)
Atlas/android/: build.gradle  test
Atlas/atlasAnnoServer/: .gitignore  README.md  manage.py  requirements.txt
Atlas/backend/: .gitignore  README.md  manage.py  requirements.txt
Atlas/frontend/: README.md  package-lock.json  package.json
Atlas/recommendation_models/: item_popularity_model.ipynb  item_similarity_model.ipynb
Atlas/scripts/unesco-whc/: LICENSE  README.md  cabal.sandbox.config  file.xml  stack.yaml  tags  unesco-whc.cabal
Atlas/scripts/unesco-whc/src/: Database.hs  Main.hs  Parser.hs  Types.hs
Atlas/test/e2e/: LICENSE  README.md  e2e.cabal  readme-example-beginner.md
Atlas/test/e2e/app/: Main.hs
Atlas/test/e2e/src/: Main.hs
AtlasAndroid/app/: build.gradle  proguard-rules.pro
Documentation/Plan/: Gantt chart.ods
Documentation/Sequence Diagram/: Annotation.uxf  Comment.uxf  CreateItem.uxf  Login.uxf  LoginSeq.uxf  androidDownloadItem.uxf  createCHI.uxf  description  sequenceDiagramSearch.uxf
Documentation/Sequence_Diagrams/: Edit_Profile.uxf  Signup.uxf  addAnnotation.uxf
Documentation/Use Case Diagram/: Use Case Diagram.uxf
Documentation/Use_Case_Diagram/: classDiagram.uxf  use_case_diagram.uxf
(+452 files in other folders)
