name:                unesco-whc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/unesco-whc#readme
license:             BSD3
license-file:        LICENSE
author:              Yigit Ozkavci
maintainer:          yigitozkavci8@gmail.com
copyright:           2017 Yigit Ozkavci
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable unesco-whc-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , unesco-whc
                     , hxt
                     , HandsomeSoup
                     , postgresql-simple
                     , text
                     , mtl
                     , HTTP
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/unesco-whc
